feat: add tree-style AST printer and fix minor bugs